<resources>
    <string name="app_name">SEL</string>
    <string name="hint_title">Title...</string>
    <string name="hint_isbn">ISBN...</string>
    <string name="hint_author">Author...</string>
    <string name="hint_course">Course...</string>
    <string name="hint_condition">Condition...</string>
    <string name="hint_price">Price...</string>
    <string name="button_post">Post</string>
    <string name="button_buy">Buy</string>
    <string name="saved">Book was posted.</string>
    <string name="not_saved">Book not posted because it is empty.</string>
    <string name="bought">Payment was successfully processed.</string>
    <string name="not_bought">Payment was not successfully processed.</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>


    <string name="sign_in">Sign In</string>


    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>

    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="browse_books">Browse Books</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="title_activity_home">Browse Available Books</string>

    <string name="for_sale">Browse Books</string>
    <string name="your_books">Add/Edit Books</string>
    <string name="welcome">WELCOME!</string>
    <string name="credits_available">You have %d credits</string>

    <string name="main_notification_channel_name">Primary</string>
    <string name="main_notification_title">There\'s been an update on SEL!</string>
    <string name="main_notification_body">Check it out!</string>

</resources>
