<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

  <EditText
      android:id="@+id/edit_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-light"
      android:hint="@string/hint_title"
      android:inputType="textAutoComplete"
      android:padding="@dimen/small_padding"
      android:layout_marginBottom="@dimen/big_padding"
      android:layout_marginTop="@dimen/big_padding"
      android:textSize="18sp" />

  <EditText
      android:id="@+id/edit_isbn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-light"
      android:hint="@string/hint_isbn"
      android:inputType="textAutoComplete"
      android:padding="@dimen/small_padding"
      android:layout_marginBottom="@dimen/big_padding"
      android:layout_marginTop="@dimen/big_padding"
      android:textSize="18sp" />

  <EditText
      android:id="@+id/edit_author"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-light"
      android:hint="@string/hint_author"
      android:inputType="textAutoComplete"
      android:padding="@dimen/small_padding"
      android:layout_marginBottom="@dimen/big_padding"
      android:layout_marginTop="@dimen/big_padding"
      android:textSize="18sp" />

  <EditText
      android:id="@+id/edit_course"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-light"
      android:hint="@string/hint_course"
      android:inputType="textAutoComplete"
      android:padding="@dimen/small_padding"
      android:layout_marginBottom="@dimen/big_padding"
      android:layout_marginTop="@dimen/big_padding"
      android:textSize="18sp" />

  <EditText
      android:id="@+id/edit_condition"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-light"
      android:hint="@string/hint_condition"
      android:inputType="textAutoComplete"
      android:padding="@dimen/small_padding"
      android:layout_marginBottom="@dimen/big_padding"
      android:layout_marginTop="@dimen/big_padding"
      android:textSize="18sp" />

  <EditText
      android:id="@+id/edit_price"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-light"
      android:hint="@string/hint_price"
      android:inputType="textAutoComplete"
      android:padding="@dimen/small_padding"
      android:layout_marginBottom="@dimen/big_padding"
      android:layout_marginTop="@dimen/big_padding"
      android:textSize="18sp" />

  <Button
      android:id="@+id/button_save"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorPrimary"
      android:text="@string/button_post"
      android:textColor="@color/buttonLabel" />

</LinearLayout>