<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        android:text="@string/credits_available"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/buttonBooksForSale"
        style="@android:style/ButtonBar"
        android:layout_width="175dp"
        android:layout_height="145dp"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:text="@string/for_sale"
        android:textColor="@color/buttonLabel" />

    <Button
        android:id="@+id/buttonBooksOwned"
        style="@android:style/ButtonBar"
        android:layout_width="175dp"
        android:layout_height="145dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@color/colorPrimary"
        android:text="@string/your_books"
        android:textColor="@color/buttonLabel" />

    <Button
        android:id="@+id/buttonSignOut"
        style="@android:style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="85dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_out"
        android:textColor="@color/buttonLabel"
        android:textSize="14sp" />

</RelativeLayout>

